--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,7 @@ cryptography==3.4.7
 Django==3.2.5
 django-cors-headers==3.7.0
 djangorestframework==3.12.4
+gunicorn==20.1.0
 Jinja2==3.0.1
 MarkupSafe==2.0.1
 mysqlclient==2.0.3
