--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@ asgiref==3.4.1
 autopep8==1.5.7
 cffi==1.14.6
 cryptography==3.4.7
+dj-database-url==0.5.0
 Django==3.2.5
 django-cors-headers==3.7.0
 djangorestframework==3.12.4
